# goal_assignment

./: README.md
location_interfaces/: CMakeLists.txt  package.xml
location_interfaces/srv/: ExecuteMission.srv
location_package/: package.xml  setup.cfg  setup.py
location_package/launch/: goals.launch.py
location_package/location_package/: coordinate_logger.py  goal_executor.py
tcp_client_package/: package.xml  setup.cfg  setup.py
tcp_client_package/tcp_client_package/: tcp_client_node.py
